more minor edits

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -165,27 +165,30 @@ approach and some basic lab policies.
   that's unclear, add a comment, etc.  Importantly, be sure to push
   your edits to the manual's
   \href{https://bitbucket.org/manning3/lab-manual}{Bitbucket
-    repository} so that everyone can benefit.} Every new lab member
-should read the latest version of this lab manual in detail and
-reference it later as needed.  Periodically throughout the document,
-you will see margin notes with listed \texttt{TASK} items.  Completing
-your read through entails both reading the contents of the manual and
-completing the relevant \texttt{TASK} items.
+    repository} so that everyone can benefit.}
+Every new lab member should read
+the latest version of this lab manual in detail and reference it later
+as needed.  Periodically throughout the document, you will see margin
+notes with listed \texttt{TASK} items.  Completing your read through
+entails both reading the contents of the manual and completing the
+relevant \texttt{TASK} items.
 
 \newthought{What should you do if you don't understand something?}
-\marginnote{\texttt{TIP:} If you don't understand something, ask
-  another lab member for help!}If you don't understand something you
-read in this manual, it is important that you \textit{ask another lab
-  member for help}.  Every member of the lab brings their own unique
-knowledge base, training, life experiences, and perspectives.
-Respecting and celebrating those differences drives the science we do.
-If you're new to the lab or new to a particular technique, you might
-feel like a newbie today--- but chances are good that if you stick
-around for a bit someone else will be seeking your expert opinion
-before you know it.  In addition to learning, there's another good
-reason for asking for help: if you don't understand something, there's
-a reasonable chance that you've discovered a mistake or a logical
-inconsistency!
+\marginnote{\texttt{TASK:} If you haven't used \LaTeX~before (i.e.,
+  the document formatting language in which this manual is written),
+  you'll want to take a look at
+  \href{https://www.latex-tutorial.com/tutorials/quick-start/}{this
+    ``quick start'' tutorial}.}If you don't understand something you read in this
+manual, it is important that you \textit{ask another lab member for
+  help}.  Every member of the lab brings their own unique knowledge
+base, training, life experiences, and perspectives.  Respecting and
+celebrating those differences drives the science we do.  If you're new
+to the lab or new to a particular technique, you might feel like a
+newbie today--- but chances are good that if you stick around for a
+bit someone else will be seeking your expert opinion before you know
+it.  In addition to learning, there's another good reason for asking
+for help: if you don't understand something, there's a reasonable
+chance that you've discovered a mistake or a logical inconsistency!
 
 \newthought{Why is it worth my time to read through the manual?}
 Aside from pursuing your own curiosity, a major reason that you've
