final update before sending to lab mailing list

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -827,7 +827,7 @@ should be reported immediately.
  expenses to a limited number of conferences each year.  These should
  be discussed with \director.
 
-If you are an undergraduate research not presenting your work, the lab
+If you are an undergraduate researcher not presenting your work, the lab
 will generally not pay for you to attend conferences.  However, if you
 are interested in attending a conference, and you aren't able to
 secure funding through non-lab sources, you should discuss your
