--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -833,6 +833,9 @@ are interested in attending a conference, and you aren't able to
 secure funding through non-lab sources, you should discuss your
 options with \director.
 
+ \subsection{Poster Creation}
+ There are many options for poster creation. One option is to create a slide in Powerpoint, Keynote, or a similar application, and export to PDF for printing. Sample/template posters, with the correct scale and resolution, including both the Dartmouth seal and Contextual Dynamics Lab logo, for powerpoint (.pptx) can be found \href{http}{here}. 
+
  \subsection{Poster printing}
  There are two on-campus poster printers.  One is in the Map Room of
  Baker Library.  More information may be found
